# ChatExample

./: .appveyor.yml  .travis.yml  CMakeLists.txt  QtSimpleChat.pro
QtSimpleChat/: CMakeLists.txt
QtSimpleChatClient/: CMakeLists.txt  QtSimpleChatClient.pro  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  serverswindow.cpp  serverswindow.h  serverswindow.ui
QtSimpleChatServer/: CMakeLists.txt
QtSimpleChatServerThreaded/: CMakeLists.txt
